# controls

./: README.md  drivetrain.launch.py  manipulator.launch.py  plan.txt
controls/: package.xml  setup.py
controls/config/: green.txt  logitech.txt  purple.txt
controls/controls/: drivetrain.py  drivetrain_debugger.py  graphical_debugger.py  ik_manipulator.py  manipulator.py  manipulator_debugger.py  motor.py  zero_ik_manipulator.py
controls/launch/: drivetrain.launch.py  ik_manipulator.launch.py  manipulator.launch.py  wand2_drivetrain.launch.py  zero_ik_manipulator.launch.py
controls_interfaces/: CMakeLists.txt  package.xml
controls_interfaces/srv/: CanSendRecv.srv  UartSendRecv.srv
controls_msgs/: CMakeLists.txt  package.xml
controls_msgs/msg/: CANIDSettingMsgRecvParams.msg  CANIDSettingMsgSentParams.msg  CanSendRecvRecvParams.msg  CanSendRecvSentParams.msg  CommunicationBaudRateSettingMsgSentParams.msg  CommunicationInterruptionProtectionTimeSettingMsgSentParams.msg  IncrementalPositionClosedLoopControlMsgSentParams.msg  ManipulatorControl.msg  MotorPowerAcquisitionMsgRecvParams.msg  ReadAccelerationMsgRecvParams.msg  ReadMotorStatus1MsgRecvParams.msg  ReadMotorStatus3MsgRecvParams.msg  ReadMultiTurnAngleMsgRecvParams.msg  ReadMultiTurnEncoderOriginalPositionMsgRecvParams.msg  ReadMultiTurnEncoderPositionMsgRecvParams.msg  ReadSingleTurnAngleMsgRecvParams.msg  ReadSingleTurnEncoderMsgRecvParams.msg  SingleTurnPositionControlMsgSentParams.msg  SpeedClosedLoopControlMsgRecvParams.msg  SpeedClosedLoopControlMsgSentParams.msg  SystemOperatingModeAcquisitionMsgRecvParams.msg  SystemRuntimeReadMsgRecvParams.msg  SystemSoftwareVersionDateReadMsgRecvParams.msg  TorqueClosedLoopControlMsgSentParams.msg  UartMessage.msg  UartSendRecvRecvParams.msg  UartSendRecvSentParams.msg  WriteAccelerationRAMROMMsgRecvParams.msg  WriteAccelerationRAMROMMsgSentParams.msg  WriteEncoderMultiTurnZeroMsgRecvParams.msg  WriteEncoderMultiTurnZeroMsgSentParams.msg  WritePIDParamsROMMsgRecvParams.msg  WritePIDParamsROMMsgSentParams.msg
controls_msgs/myactuator_srvs/: WriteAccelerationRAMROMMsg.srv  WriteEncoderMultiTurnZeroMsg.srv
controls_msgs/scripts/: msgs.py
controls_msgs/srv/: CommunicationInterruptionProtectionTimeSettingMsg.srv  ReadMotorStatus1Msg.srv  UartSendRecv.srv  WritePIDParamsRAMMsg.srv
drivetrain/: package.xml  setup.py
drivetrain/drivetrain/: drivetrain.py  helpers.py
hw_interface/: package.xml  setup.cfg  setup.py
hw_interface/hw_interface/: can.py  can_interface.py  motor.py  motor_node.py  uart_interface.py
manipulator/: package.xml  setup.py
manipulator/config/: green.yaml
manipulator/manipulator/: controls.py  manipulator.py
motor_interfacing/: package.xml  setup.cfg  setup.py
motor_interfacing/motor_interfacing/: can_interface.py  uart_interface.py
scripts/: msgs.py
